--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "private": true,
-  "name": "cara",
+  "name": "@mhooshdar/portfolio",
   "description": "Playful and Colorful One-Page portfolio featuring Parallax effects and animations",
-  "version": "0.2.11",
-  "author": "LekoArts <hello@lekoarts.de>",
-  "license": "0BSD",
-  "starter-name": "gatsby-starter-portfolio-cara",
+  "version": "0.0.1",
+  "author": "Mohammad Hooshdar",
+  "starter-name": "mhooshdar-portfolio",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
