--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/mhooshda/public_html/
-    - /bin/cp -R public $DEPLOYPATH
+    - /bin/cp -R public/* $DEPLOYPATH
